[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itsm-tools"
version = "0.1.0"
description = "Provider-agnostic ITSM tools - Jira, Confluence, JSM, ServiceNow adapters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FJHIT Consulting LLC", email = "cloud-infrastructure@fjhit.com" }
]
keywords = [
    "itsm",
    "jira",
    "confluence",
    "atlassian",
    "servicenow",
    "incidents",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "keyring>=24.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
itsm = "itsm_tools.cli:main"

[project.urls]
Homepage = "https://github.com/FJHIT-Consulting-LLC/itsm-tools"
Repository = "https://github.com/FJHIT-Consulting-LLC/itsm-tools"
Issues = "https://github.com/FJHIT-Consulting-LLC/itsm-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/itsm_tools"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "import-outside-toplevel",
    "duplicate-code",
    "invalid-name",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
    "try-except-raise",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=itsm_tools --cov-report=term-missing"

[tool.coverage.run]
source = ["src/itsm_tools"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]